...

  return (
    <View style={styles.container}>
      <Text style={styles.title}>Welcome to</Text>
      <Text style={styles.logo}>ConU CG</Text>
      <TouchableOpacity style={styles.button} onPress={() => navigation.navigate("Map")}>
        <Text style={styles.buttonText}>Continue to map ➤</Text>
      </TouchableOpacity>
    </View>
  );
}

const styles = StyleSheet.create({
...
