...
          <ActivityIndicator size="large" color="blue" />
          <Text style={styles.loadingText}>Loading locations...</Text>
        </View>
      ) : (
        <View style={styles.mapContainer}>
          <MapView
            testID="map-view" // added to enable getting the map by testID
            style={styles.map}
            region={region}
            showsUserLocation={true}
            onPress={() => setSelectedMarker(null)}
          >
            {/* Markers for locations */}
...
