...
      <View style={styles.searchContainer}>
        {/* Start Address TextInput with Icon */}
        <View style={styles.inputContainer}>
          <Ionicons name="location-outline" size={20} color="#800020" style={styles.icon} />
          <TextInput 
            style={styles.input} 
            placeholder="Start Address" 
            value={startAddress} 
            onChangeText={(text) => onStartNavigation(text)} 
          />
        </View>

        {/* Destination Address TextInput with Icon */}
        <View style={styles.inputContainer}>
          <Ionicons name="location-outline" size={20} color="#800020" style={styles.icon} />
          <TextInput 
            style={styles.input} 
            placeholder="Destination Address" 
            value={destinationAddress} 
            onChangeText={(text) => onStartNavigation(text)} 
          />
        </View>
      </View>

...
