...
      <TouchableOpacity style={[styles.navButton, !isIndoor && styles.activeNav]} onPress={() => setIsIndoor(false)}>
        <Text style={[styles.navText, !isIndoor && styles.activeText]}>Outdoor</Text>
      </TouchableOpacity>

      {/* Indoor Button */}
      <TouchableOpacity style={[styles.navButton, isIndoor && styles.activeNav]} onPress={() => setIsIndoor(true)}>
        <Text style={[styles.navText, isIndoor && styles.activeText]}>Indoor</Text>
      </TouchableOpacity>
    </View>
  );
};

NavigationToggle.propTypes = {
...
