appId: host.exp.Exponent
name: "Sidebar"
---
- launchApp:
  clearState: "true" # ensures that each test starts with a clean slate for better performance
- assertVisible:
    id: "menu-button"
- tapOn:
    id: "menu-button"
- assertVisible: "ConU CG"
# test home button
- assertVisible: "🏠 Home"
- tapOn: "🏠 Home"
- tapOn: "Continue to map ➤"
- assertVisible:
    id: "map-view"
- tapOn:
    id: "menu-button"
  #test explore all buildings button
- assertVisible: "🏛 Explore All Buildings"
- tapOn: "🏛 Explore All Buildings"
- assertVisible:
    id: "map-view"
- tapOn:
    id: "menu-button"
#test navigate button
- assertVisible: "🚶‍♂️ Navigate"
- tapOn: "🚶‍♂️ Navigate"
- assertVisible: "Google Map"
- tapOn: "←"
- tapOn:
    id: "menu-button"
#test help button (currently disabled)
- assertVisible: "❓ Help"
#test feedback button (currently disabled)
- assertVisible: "💬 Feedback"
#go back to home --> map screen for next tests
- tapOn: "🏠 Home"
- tapOn: "Continue to map ➤"
