appId: host.exp.Exponent
---
- assertVisible:
    id: "menu-button"
- tapOn:
    id: "menu-button"
- assertVisible: "ConU CG"
- assertVisible:
  text: "🏠 Home"
  enable: true
- assertVisible:
  text: "🏛 Explore All Buildings"
  enable: false
- assertVisible:
  text: "🚶‍♂️ Navigate"
  enable: true
- assertVisible:
  text: "❓ Help"
  enable: false
- assertVisible:
  text: "💬 Feedback"
  enable: false
