appId: host.exp.Exponent
name: "Feature 2 - Outdoor Directions"
---
- launchApp:
  clearState: "true" # ensures that each test starts with a clean slate for better performance
- assertVisible:
    id: "menu-button"
- tapOn:
    id: "menu-button"
- assertVisible: "ConU CG"
# note: removed test home button because it is redundant with sidebar test flow
# go to map view
- tapOn: "🏛 Explore All Buildings"
#Feature 2.2 - Assert User's Current Location
- assertVisible:
    id: "map-view"
- assertVisible:
    id: "zoom-in-button"
- tapOn:
    id: "zoom-in-button"
- tapOn:
    id: "zoom-in-button"
- scroll #scroll vertically
- tapOn:
    id: "locate-button"
# check that my location button re-centers screen to user's location
- assertVisible: "H"

# UPDATED: test that providing a start point will take the user to the navigation screen
# test start point other than Current Location
- tapOn: "MU"
- tapOn: "Get Directions"
- tapOn: "Set as Start"
# select destination
- scrollUntilVisible:
    element: "LS"
    direction: DOWN
- tapOn: "LS"
- tapOn: "Get Directions"
- tapOn: "Set as Destination"
# make sure that the navigation screen and relevant information renders
- runFlow:
    when:
      visible: "Google Map"
    file: ./subflows/assert_render_navigation_screen.yaml
#[Deprecated]- assertVisible: "My Location"
- assertVisible: "MU"
- assertVisible: "LS"
# switch start and destination
- tapOn:
    text: ""
    index: 1
- assertVisible: "Walk"
- assertVisible: "Bike"
- assertVisible: "Car"
- assertVisible: "Bus"
- assertVisible: "Shuttle"
- assertVisible: "Google Map"
- assertVisible: "MU"
- assertVisible: "LS"
# leave navigation map
- tapOn: "←"
# close info popup
# remove MU as start point
- tapOn:
    id: "reset-start-point-button"
# check that the campus toggle button and other components render
- assertVisible:
    id: "campus-button"
- assertVisible: "Google Map"
# go to menu
- tapOn:
    id: "menu-button"
# test that Navigate button from sidebar works properly
- tapOn: "🚶‍♂️ Navigate"
- tapOn: "Destination Address"
# select destination by scrolling to building name
- scrollUntilVisible:
    element:
      text: "Grey Nuns Garden"
    timeout: 50000
- tapOn: "Grey Nuns Garden"
# make sure that the navigation screen and relevant information renders
- runFlow:
    when:
      visible: "Google Map"
    file: ./subflows/assert_render_navigation_screen.yaml
- assertVisible: "Start Navigation"
# check direction preview
- assertVisible:
    text: "Preview"
    enabled: true
- tapOn: "Preview"
#[Deprecated]- assertVisible: "Directions"
- assertVisible: "Turn Left"
- assertVisible: "Turn Right"
- tapOn: "←"
#[Deprecated]- assertVisible: "My Location"
# check that start navigation works
#[Deprecated]- assertVisible: "Start Navigation"
#[Deprecated]- tapOn: "Start Navigation"
#[Deprecated]- assertVisible:
#    text: "Exit"
#    enabled: true
#[Deprecated]- tapOn: "Exit"
- tapOn: "←"
- assertVisible: "Google Map"
##some tests to make sure that reversing start/destination works with navigation (set destination to something else than current location)
#- setLocation:
#    latitude: 45.497660
#    longitude: -73.579162
- tapOn:
    id: "campus-button"
- tapOn:
    id: "campus-button" # go back to swg for next tests
- tapOn:
    id: "zoom-in-button"
- tapOn:
    id: "zoom-in-button"
